# autoforge

./: .gitignore  CLAUDE.md  README.md  progress.md  pyproject.toml
.claude/commands/: improve-go-tests.md  improve-test-quality.md  improve-type-safety.md  refactor-complexity.md
.github/workflows/: autoforge.yml  publish.yml  tests.yml
docs/: design-test-quality-metrics.md  design-tqs-data-models-api.md  design.md  progress.md
src/autoforge/: __init__.py  __main__.py  budget.py  git_manager.py  models.py  registry.py  regression.py  reporting.py  runner.py  skill.py
src/autoforge/adapters/: __init__.py  base.py  complexity.py  test_quality.py
src/autoforge/workflows/: __init__.py  complexity_refactor.yaml  go_test_quality.yaml  test_quality.yaml  type_safety.yaml
testdata/go-sample-project/: calc.go  calc_test.go  go.mod
tests/: test___main__.py  test_adapters.py  test_base.py  test_budget.py  test_cli.py  test_complexity.py  test_git_manager.py  test_integration.py  test_models.py  test_registry.py  test_regression.py  test_reporting.py  test_runner.py  test_skill.py  test_test_quality_adapter.py
