[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-autoforge"
version = "0.1.1"
description = "Metric-driven coding tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["code-quality", "ai-tools", "metrics", "refactoring", "measurement"]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
complexity = ["autoforge-complexity>=0.1.0"]
test-quality = ["autoforge-test-quality>=0.1.0"]
all = [
    "autoforge-complexity>=0.1.0",
    "autoforge-test-quality>=0.1.0",
]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0"]

[project.scripts]
autoforge = "autoforge.__main__:main"

[project.urls]
Homepage = "https://github.com/zhanglpg/autoforge"
Repository = "https://github.com/zhanglpg/autoforge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["autoforge"]

[tool.coverage.report]
show_missing = true
